--- a/Webpage/Stylesheet.css
+++ b/Webpage/Stylesheet.css
@@ -88,19 +88,23 @@ footer {
 }
 
 .article {
-	background-color:white;
-	color:black;
-	border: solid black 4px;
 	display:block;
 	float:left;
 	width:25em;
 	margin: 0 2em;
+	padding-bottom:2.2em;
 }
 
 .article .comment {
-	border: 2px solid;
-	padding-left:1em;
-	padding-top:1em;
-    padding-bottom:5em;
+	background-color:white;
+	color:black;
+	border: solid black 4px;
+	padding:1em;
+	line-height:1.3;
+	word-wrap:break-word;
+}
+
+.article .comment u {
+color:#332;
 }
 
