--- a/Webpage/Stylesheet.css
+++ b/Webpage/Stylesheet.css
@@ -1,3 +1,5 @@
+
+
 body { 
 	background-color:#313; 
 }
@@ -113,20 +115,21 @@ color:#332;
 
 .gallery {
 text-align:center;
-background-color:black;
-padding-top:3em;
-padding-bottom:4em;
+padding-bottom:3em;
 border-radius:1em;
+}
+
+
+.gallery a {
+background-color:black;
 }
 
 .gallery img {
    height:20em;
    width:30em;
-   border: 2px solid black;
+   border:4px solid black;
 }
 .gallery img:hover {
-   height:20.15em;
-   width:30.15em;
    
 }
 
@@ -134,13 +137,21 @@ border-radius:1em;
 	display:inline;
 	}
 .gallery li a {
-	padding: 1em;
-	background-color:#333;
+    padding-left:0.5em;
+    padding-right:0.5em;
 	color:yellow;
-	border-radius:9px;
+	border: 2px solid black;
+	text-decoration:none;
+}
+
+.gallery .pagiator {
+    border: 0.8em solid black;
+	border-radius:0 0 1em 1em;
+	background-color:black;
+	margin: 0 auto;
+	width:20em;
 }
 
 .gallery li a:hover {
-		border-radius:13px;
-
+	color:#313;
 }
